styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  :root {
    --col-width: calc(1280px / 6);
  }
  .layout-grid {
    display: grid;
    grid-template-columns:
      1fr minmax(0, var(--col-width))
      minmax(0, var(--col-width)) minmax(0, var(--col-width))
      minmax(0, var(--col-width)) minmax(0, var(--col-width))
      minmax(0, var(--col-width)) 1fr;
    grid-auto-flow: dense;
  }
  .button-underline {
    border-bottom-width: 3px;
    border-style: solid;
    @apply border-action-purple;
  }

  .word-spacing-xl {
    word-spacing: 5rem;
  }

  .word-spacing-md {
    word-spacing: 3rem;
  }
}

@layer base {
  $mid: 1028px;
  $small: 728px;

  /* From Figma style guide */
  h1,
  .h1 {
    @apply font-header text-dark-blue;
    font-size: 64px;
    letter-spacing: 0.085em;
    line-height: 161.5%;
    text-transform: uppercase;
    font-weight: 800;

    @media screen and (max-width: theme("screens.xl.max")) {
      font-size: 50px;
    }

    @media screen and (max-width: theme("screens.lg.max")) {
      font-size: 42px;
    }

    @media screen and (max-width: theme("screens.md.max")) {
      font-size: 35px;
    }

    @media screen and (max-width: theme("screens.sm.max")) {
      font-size: 25px;
    }
  }

  h2,
  .h2 {
    @apply font-header-mono text-dark-blue;
    font-size: 64px;
    letter-spacing: 0.085em;
    line-height: 161.5%;

    @media screen and (max-width: theme("screens.xl.max")) {
      font-size: 50px;
    }

    @media screen and (max-width: theme("screens.lg.max")) {
      font-size: 42px;
    }

    @media screen and (max-width: theme("screens.md.max")) {
      font-size: 35px;
    }

    @media screen and (max-width: theme("screens.sm.max")) {
      font-size: 25px;
    }
  }

  h3,
  .h3 {
    @apply font-default text-dark-blue;
    font-weight: 32px;
    line-height: 161.5%;
    letter-spacing: 0.085em;

    @media screen and (max-width: theme("screens.md.max")) {
      font-size: 30px;
    }
  }

  h4,
  .h4 {
    @apply font-default text-dark-blue;
    font-size: 28px;
    line-height: 148%;
    font-weight: 500;
  }

  h5,
  .h5 {
    @apply font-default text-dark-blue;
    font-size: 22px;
    letter-spacing: 0.085em;
    line-height: 161.5%;
    text-transform: uppercase;
    font-weight: bold;
  }

  h6,
  .h6 {
    @apply font-header-mono text-mid-blue;
    font-size: 20px;
    line-height: 141%;
    letter-spacing: 0.085em;
    text-transform: uppercase;
  }

  .ingress {
    font-size: 32px;
    line-height: 180%;
    letter-spacing: 0.085em;
    @apply font-default font-normal;

    @media screen and (max-width: theme("screens.md.max")) {
      font-size: 20px;
    }
  }

  .paragraph {
    @apply font-default text-dark-blue;
    font-size: 24px;
    line-height: 161.5%;
    letter-spacing: 0.085em;
  }

  .caption {
    @apply font-default text-mid-blue;
    font-size: 14px;
  }

  .tag {
    @apply font-header-mono;
    font-size: 20px;
    letter-spacing: 0.06em;
    line-height: 141.5%;
    text-transform: uppercase;
    font-weight: 400;
  }

  .tag.font-bold {
    letter-spacing: 0.015em;
    font-weight: 500;
  }

  /* Other */
  body {
    letter-spacing: 0.085em;
    @apply font-default font-normal text-2xl text-dark-blue;
  }

  body.modal-open {
    overflow: hidden;
  }

  nav {
    font-size: 18px;
    line-height: 29px;
    text-align: center;
    letter-spacing: 0.085em;

    @apply font-default font-bold;
  }
}

